# asproject

./: .gitignore  AutonomousSystems2024.synctex  README.md
catkin_ws/src/controller_pkg/: package.xml
catkin_ws/src/controller_pkg/src/: controller_node.cpp
catkin_ws/src/navigation_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/path_planning_pkg/: README.md
catkin_ws/src/path_planning_pkg/launch/: path_planning.launch
catkin_ws/src/path_planning_pkg/src/: path_planner_node.cpp
catkin_ws/src/perception_pipeline/launch/: pointcloud_to_octomap.launch
catkin_ws/src/state_machine_pkg/: CMakeLists.txt
catkin_ws/src/state_machine_pkg/launch/: master_launch.launch
catkin_ws/src/trajectory_tracking_pkg/src/: trajectory_tracker.cpp
code/: depthpclviz.rviz  frames.gv
code/.catkin_tools/profiles/default/: devel_collisions.txt
code/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
code/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
code/devel/.private/controller_pkg/: .catkin  .rosinstall  local_setup.sh  setup.sh
code/devel/.private/fla_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
code/devel/.private/fla_utils/: .catkin  .rosinstall  local_setup.sh  setup.sh
code/devel/.private/mav_comm/: .catkin  .rosinstall  local_setup.sh  setup.sh
code/devel/.private/mav_msgs/: .catkin  .rosinstall  setup.sh
code/devel/.private/mav_planning_msgs/: .catkin  local_setup.sh  setup.sh
code/devel/.private/mav_state_machine_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
code/devel/.private/mav_system_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
code/devel/.private/nav_msgs/: .catkin  .rosinstall  setup.sh
code/devel/.private/navigation_pkg/: .catkin  setup.sh
code/devel/.private/simulation/: .catkin  .rosinstall  local_setup.sh  setup.sh
code/devel/.private/state_machine_pkg/: .catkin  .rosinstall
code/devel/.private/trajectory_tracking_pkg/: .catkin
code/devel/include/fla_msgs/: Box.h  ControlMessage.h  Detection.h  FlightCommand.h  FlightEvent.h  FlightStateTransition.h  ImageDetections.h  ImageSegmentation.h  JoyDef.h  Keypoint.h  Latency.h  NodeList.h  NodeStatus.h  ProcessStatus.h  TelemString.h  WaypointList.h
code/devel/include/libsocket/: dgramclient.hpp  dgramoverstream.hpp  epoll.hpp  exception.hpp  framing.hpp  inetbase.hpp  inetclientdgram.hpp  inetclientstream.hpp  inetdgram.hpp  inetserverdgram.hpp  inetserverstream.hpp  libinetsocket.h  libunixsocket.h  select.hpp  socket.hpp  streamclient.hpp  unixbase.hpp  unixclientdgram.hpp  unixclientstream.hpp  unixdgram.hpp  unixserverdgram.hpp  unixserverstream.hpp
code/devel/include/mav_msgs/: Actuators.h  AttitudeThrust.h  FilteredSensorData.h  GpsWaypoint.h  RateThrust.h  RollPitchYawrateThrust.h  Status.h  TorqueThrust.h
code/devel/include/mav_planning_msgs/: ChangeNameService.h  ChangeNameServiceRequest.h  ChangeNameServiceResponse.h  PlannerService.h  PlannerServiceRequest.h  PlannerServiceResponse.h  Point2D.h  PointCloudWithPose.h  Polygon2D.h  PolygonService.h  PolygonServiceRequest.h  PolygonServiceResponse.h  PolygonWithHoles.h  PolygonWithHolesStamped.h  PolynomialSegment.h  PolynomialSegment4D.h  PolynomialTrajectory.h  PolynomialTrajectory4D.h
code/devel/include/mav_state_machine_msgs/: RunTaskService.h  RunTaskServiceRequest.h  RunTaskServiceResponse.h  StartStopTask.h
code/devel/include/mav_system_msgs/: CpuInfo.h  ProcessInfo.h
code/devel/include/nav_msgs/: GetMap.h  GetMapAction.h  GetMapActionFeedback.h  GetMapActionGoal.h  GetMapActionResult.h  GetMapFeedback.h  GetMapGoal.h  GetMapRequest.h  GetMapResponse.h  GetMapResult.h  GetPlan.h  GetPlanRequest.h  GetPlanResponse.h  GridCells.h  LoadMap.h  LoadMapRequest.h  LoadMapResponse.h  MapMetaData.h  OccupancyGrid.h  Odometry.h  Path.h  SetMap.h  SetMapRequest.h  SetMapResponse.h
code/devel/lib/controller_pkg/: controller_node  traj_publisher
code/devel/lib/fla_utils/: interpolate_imu  laserscan_to_pointcloud
code/devel/lib/navigation_pkg/: landing_controller_node  navigation_controller_node
code/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  controller_pkg.pc  fla_msgs.pc  fla_utils.pc  mav_msgs.pc  mav_planning_msgs.pc  mav_state_machine_msgs.pc  mav_system_msgs.pc  nav_msgs.pc  navigation_pkg.pc  simulation.pc  state_machine_pkg.pc  trajectory_tracking_pkg.pc
code/devel/lib/simulation/: state_estimate_corruptor_node  unity_ros  w_to_unity
code/devel/lib/state_machine_pkg/: state_machine_node
code/devel/lib/trajectory_tracking_pkg/: trajectory_tracker_node
code/logs/mav_msgs/: build.symlink.005.log.stderr  build.symlink.006.log.stderr
code/logs/mav_state_machine_msgs/: build.symlink.005.log.stderr  build.symlink.006.log.stderr
code/logs/mav_system_msgs/: build.symlink.005.log.stderr  build.symlink.006.log.stderr
code/logs/nav_msgs/: build.symlink.005.log.stderr  build.symlink.006.log.stderr
code/logs/simulation/: build.make.000.log.stderr
code/logs/state_machine_pkg/: build.make.005.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr
code/src/exploration_pkg/: CMakeLists.txt  package.xml
code/src/exploration_pkg/src/: exploration_node.cpp
code/src/navigation_pkg/launch/: navigation.launch
code/src/navigation_pkg/src/: landing_controller.cpp  navigation_controller.cpp
code/src/path_planning_pkg/: CMakeLists.txt  package.xml
code/src/path_planning_pkg/launch/: cave_exploration.launch
code/src/path_planning_pkg/rviz/: path_planning.rviz
code/src/path_planning_pkg/src/: path_planner_node.cpp  path_visualization_node.cpp  trajectory_generator_node.cpp
code/src/perception_pipeline/: CMakeLists.txt  package.xml
code/src/simulation/: CMakeLists.txt
code/src/state_machine_pkg/: CMakeLists.txt  package.xml
code/src/trajectory_tracking_pkg/: CMakeLists.txt  package.xml
code/src_backup/controller_pkg/: CMakeLists.txt
code/src_backup/state_machine_pkg/: package.xml
(+445 files in other folders)
