<?xml version="1.0"?>
<package format="2">
  <name>exploration_pkg</name>
  <version>0.1.0</version>
  <description>The exploration package for the cave exploration challenge</description>

  <maintainer email="your_name@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>std_srvs</depend>
  
  <build_depend>octomap</build_depend>
  <build_depend>cmake_modules</build_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>roslib</exec_depend>
  
  <export>
  </export>
</package>