<?xml version="1.0"?>
<package format="2">
  <name>path_planning_pkg</name>
  <version>1.0.0</version>
  <description>3D Path Planning System for Cave Exploration Drone</description>

  <maintainer email="tu@email.com">Tu Nombre</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>eigen_conversions</depend>

  <build_depend>libeigen3-dev</build_depend>
  <exec_depend>libeigen3-dev</exec_depend>

</package>